--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ const url_string = window.location.href; //window.location.href
       let url="https://maps.googleapis.com/maps/api/directions/json?origin="+from+"&destination="+to+"&key=AIzaSyB4VxODwCcYJz-gUfWEHcb4FL2uYtCcPGQ";
     </script>
     
-    <script src=url
+    <script src="https://maps.googleapis.com/maps/api/directions/json?origin=krakow&destination=warszawa&key=AIzaSyB4VxODwCcYJz-gUfWEHcb4FL2uYtCcPGQ"
     async defer></script>
   </body>
 </html>
