--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <div id="map"></div>
     <script>
 
-const url_string = window.location.href; //window.location.href
-    const url = new URL(url_string);
-    const from=url.searchParams.get("from");
-    const to=url.searchParams.get("to");
+// const url_string = window.location.href; //window.location.href
+//     const url = new URL(url_string);
+//     const from=url.searchParams.get("from");
+//     const to=url.searchParams.get("to");
 
 
       var map;
@@ -36,7 +36,7 @@ const url_string = window.location.href; //window.location.href
         });
       }
 
-      let url="https://maps.googleapis.com/maps/api/directions/json?origin="+from+"&destination="+to+"&key=AIzaSyB4VxODwCcYJz-gUfWEHcb4FL2uYtCcPGQ";
+      // let url="https://maps.googleapis.com/maps/api/directions/json?origin="+from+"&destination="+to+"&key=AIzaSyB4VxODwCcYJz-gUfWEHcb4FL2uYtCcPGQ";
     </script>
     
     <script async defer
