map working edit

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
+
 <html>
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+
     <meta charset="utf-8">
     <title>Directions Service</title>
     <style>
@@ -31,9 +32,9 @@
       }
     </style>
   </head>
-  <body>
+  <body style="margin:0; padding:0">
 
-    <div id="map"></div>
+    <div style="width: 100vw; height: 100vh " id="map"></div>
     <script>
 
 
